<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- drawer -->
    <string name="activity_main_drawer_courses">Cursos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Complaint add activity -->
    <string name="complaint_add_activity_edit_text_title">Titulo</string>
    <string name="complaint_add_activity_edit_text_description">Descripción</string>
    <string name="complaint_add_activity_button_create">Crear</string>

    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>

    <string name="sign_up">REGISTRARME</string>
    <string name="sign_in">ENTRAR</string>
</resources>
